--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "url": "git+https://github.com/kreucher/signalk-pisugar.git"
   },
   "keywords": [
-    "signalk-node-server-plugin"
+    "signalk-node-server-plugin",
+    "signalk-category-hardware"
   ],
-  "author": "Nicholas Kreucher",
+  "author": {
+    "name": "Nicholas J Kreucher",
+    "email": "nick@kreucher.net"
+  },
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/kreucher/signalk-pisugar/issues"
