--- a/package.json
+++ b/package.json
@@ -14,10 +14,7 @@
     "signalk-node-server-plugin",
     "signalk-category-hardware"
   ],
-  "author": {
-    "name": "Nicholas J Kreucher",
-    "email": "nick@kreucher.net"
-  },
+  "author": "Nicholas J Kreucher <nick@kreucher.net>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/kreucher/signalk-pisugar/issues"
